correcion del docker y del backend

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 # Base de datos PostgreSQL
-POSTGRES_DB=transporte
+POSTGRES_DB=inventario
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_HOST=127.0.0.1
@@ -11,7 +11,7 @@ DJANGO_SECRET_KEY=your-secret-key-here
 # '*' permite cualquier host (recomendado para Docker y EC2)
 DJANGO_ALLOWED_HOSTS=*
 DJANGO_SUPERUSER_USERNAME=admin
-DJANGO_SUPERUSER_EMAIL=admin@transporte.local
+DJANGO_SUPERUSER_EMAIL=admin@inventario.local
 DJANGO_SUPERUSER_PASSWORD=admin
 
 # Detección automática de IP (para AWS EC2 y entornos cloud)
@@ -32,7 +32,7 @@ EMAIL_HOST=mailhog
 EMAIL_PORT=1025
 EMAIL_USE_TLS=False
 EMAIL_USE_SSL=False
-DEFAULT_FROM_EMAIL=noreply@transporte.local
+DEFAULT_FROM_EMAIL=noreply@inventario.local
 
 # Site ID para allauth
 SITE_ID=1
