--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
   db:
     image: postgres:16
-    container_name: transporte_db
+    container_name: inventario_db
     env_file:
       - ./backend/.env
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-transporte}
+      POSTGRES_DB: ${POSTGRES_DB:-inventario}
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
       TZ: "America/La_Paz"
@@ -18,7 +18,7 @@ services:
       test:
         [
           "CMD-SHELL",
-          "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-transporte}",
+          "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-inventario}",
         ]
       interval: 5s
       timeout: 5s
@@ -28,7 +28,7 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    container_name: transporte_backend
+    container_name: inventario_backend
     env_file:
       - ./backend/.env
     environment:
@@ -51,7 +51,7 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-    container_name: transporte_frontend
+    container_name: inventario_frontend
     working_dir: /app
     env_file:
       - ./frontend/.env
@@ -69,7 +69,7 @@ services:
 
   redis:
     image: redis:7-alpine
-    container_name: transporte_redis
+    container_name: inventario_redis
     ports:
       - "6379:6379"
     volumes:
@@ -82,7 +82,7 @@ services:
 
   mailhog:
     image: mailhog/mailhog
-    container_name: transporte_mailhog
+    container_name: inventario_mailhog
     ports:
       - "1025:1025" # Puerto SMTP para que Django envíe correos
       - "8025:8025" # Interfaz web para ver los correos
