--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,6 +62,7 @@
     "tailwindcss": "^4.1.12",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.9.2",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "vite-plugin-pwa": "^1.1.0"
   }
 }
