--- a/mobile/android/gradle.properties
+++ b/mobile/android/gradle.properties
@@ -1,3 +1,8 @@
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+
+# Desactivar compilación incremental de Kotlin para evitar corrupción de cache
+kotlin.incremental=false
+kotlin.incremental.multiplatform=false
+org.gradle.caching=false
