--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -43,6 +43,17 @@ dependencies:
   firebase_messaging: ^15.1.5
   flutter_local_notifications: ^18.0.1
 
+  # Sistema de pagos con Stripe
+  flutter_stripe: ^11.2.0
+  webview_flutter: ^4.10.0
+  url_launcher: ^6.3.1
+
+  # Reconocimiento de voz para reportes dinámicos
+  speech_to_text: ^7.0.0
+  permission_handler: ^12.0.0
+  path_provider: ^2.1.0
+  open_filex: ^4.5.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
