integracion de pagos

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -6,3 +6,6 @@ VITE_API_URL=
 
 # Google OAuth
 VITE_GOOGLE_CLIENT_ID=your-google-client-id
+
+# Stripe (Clave de prueba - reemplazar con la real)
+VITE_STRIPE_PUBLISHABLE_KEY=pk_test_
