--- a/backend/.env.example
+++ b/backend/.env.example
@@ -37,3 +37,8 @@ DEFAULT_FROM_EMAIL=noreply@inventario.local
 # Site ID para allauth
 SITE_ID=1
 ACCOUNT_EMAIL_VERIFICATION=none
+
+# Stripe
+STRIPE_PUBLIC_KEY=your-stripe-public-key
+STRIPE_SECRET_KEY=your-stripe-secret-key
+STRIPE_WEBHOOK_SECRET=your-stripe-webhook-secret
