--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^1.1.0
   shared_preferences: ^2.1.1
   fluttertoast: ^8.2.4
+  intl: ^0.19.0
 
   # Firebase para notificaciones push
   firebase_core: ^3.8.1
