--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -55,6 +55,10 @@ dependencies:
   path_provider: ^2.1.0
   open_filex: ^4.5.0
 
+  # Generación de PDFs
+  pdf: ^3.11.3
+  printing: ^5.14.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
