--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -30,3 +30,6 @@ pytest>=7.4.0
 pytest-django>=4.5.2
 pytest-cov>=4.1.0
 factory-boy>=3.3.0
+# Azure Computer Vision para búsqueda por imagen
+azure-cognitiveservices-vision-computervision>=0.9.0
+msrest>=0.7.1
